- Fix Product Gallery on Small Screens - Improve box-shadow html Direction Behavior in Product Gallery - Remove margin-inline-start for Image Gallery Wrapper

--- a/src/components/Product/ProductGallery/ProductGallery.css
+++ b/src/components/Product/ProductGallery/ProductGallery.css
@@ -1,5 +1,5 @@
 .image-gallery {
-  position:sticky;
+  position: sticky;
   top: 75px;
 }
 
@@ -7,8 +7,9 @@
   height: max(400px, 50vh);
 }
 
-.fullscreen .image-gallery-slide-wrapper{
-  height: 100vh;
+.fullscreen>.image-gallery-slide-wrapper {
+  /* important is for small screens */
+  height: 100vh !important;
 }
 
 .fullscreen .image-gallery-slide-wrapper.image-gallery-thumbnails-top,
@@ -24,10 +25,17 @@
   height: 100% !important;
 }
 
+.image-gallery-thumbnails-wrapper {
+  margin-inline-start: 0 !important;
+}
 
 /* Hide thumbnail scrollbar in Webkit */
-.image-gallery-thumbnails::-webkit-scrollbar{
+.image-gallery-thumbnails::-webkit-scrollbar {
   display: none;
+}
+
+html[dir="rtl"] .image-gallery-thumbnails {
+  box-shadow: 4px 0 0 rgba(var(--bs-btn-focus-shadow-rgb), 0.2) inset;
 }
 
 /* Enable thumbnail scrollbar functionality and hiding it in Firefox ,IE and Edge*/
@@ -36,7 +44,7 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   scroll-behavior: smooth;
-  box-shadow: 4px 0 0  rgba(var(--bs-btn-focus-shadow-rgb), 0.2) inset;
+  box-shadow: -4px 0 0 rgba(var(--bs-btn-focus-shadow-rgb), 0.2) inset;
 }
 
 .image-gallery-thumbnail.active,
@@ -70,4 +78,3 @@
   border-color: var(--bs-btn-border-color);
   background-color: var(--bs-btn-hover-bg);
 }
-
